methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:7: error: not found: value brushdown
                               while (!isOverBaggle()) {if (!isFacingTrail()) {left(); if (!isFacingTrail()) {right(); right()}};brushdown(); forward(); brushup()}; pickupBaggle()
                                                                                                                                 ^SlugHunting:7: error: not found: value brushup
                               while (!isOverBaggle()) {if (!isFacingTrail()) {left(); if (!isFacingTrail()) {right(); right()}};brushdown(); forward(); brushup()}; pickupBaggle()
                                                                                                                                                         ^